versions/v0.1.0/_sources/autoapi/autointent/Dataset.rst.txt
autointent.Dataset
==================

.. py:class:: autointent.Dataset(*args, intents, **kwargs)

   Bases: :py:obj:`dict`\ [\ :py:obj:`str`\ , :py:obj:`datasets.Dataset`\ ]


   Represents a dataset with associated metadata and utilities for processing.

   This class extends a dictionary where the keys represent dataset splits (e.g., 'train', 'test'),
   and the values are Hugging Face datasets.


   .. py:attribute:: label_feature
      :type:  str
      :value: 'label'


      The feature name corresponding to labels in the dataset.


   .. py:attribute:: utterance_feature
      :type:  str
      :value: 'utterance'


      The feature name corresponding to utterances in the dataset


   .. py:attribute:: has_descriptions
      :type:  bool

      Whether the dataset includes descriptions for intents.


   .. py:attribute:: intents
      :type:  list[autointent.schemas.Intent]

      All metadata about intents used in this dataset.


   .. py:property:: multilabel
      :type: bool


      Checks if the dataset is multilabel.


   .. py:property:: n_classes
      :type: int


      Returns the number of classes in the dataset.


   .. py:method:: from_dict(mapping)
      :classmethod:


      Creates a dataset from a dictionary mapping.

      :param mapping: A dictionary representation of the dataset.



   .. py:method:: from_json(filepath)
      :classmethod:


      Loads a dataset from a JSON file.

      :param filepath: Path to the JSON file.



   .. py:method:: from_hub(repo_name)
      :classmethod:


      Loads a dataset from the Hugging Face Hub.

      :param repo_name: The name of the Hugging Face repository, like `AutoIntent/clinc150`.



   .. py:method:: to_multilabel()

      Converts dataset labels to multilabel format.



   .. py:method:: to_dict()

      Converts the dataset into a dictionary format.

      Returns a dictionary where the keys are dataset splits and the values are lists of samples.



   .. py:method:: to_json(filepath)

      Saves the dataset to a JSON file.

      :param filepath: The file path where the dataset should be saved.



   .. py:method:: push_to_hub(repo_name, private = False)

      Uploads the dataset to the Hugging Face Hub.

      :param repo_name: The ID of the Hugging Face repository.
      :param private: Whether to make the repository private.



   .. py:method:: get_tags()

      Extracts unique tags from the dataset's intents.



   .. py:method:: get_n_classes(split)

      Calculates the number of unique classes in a dataset split.

      :param split: The dataset split to analyze.



   .. py:method:: validate_descriptions()

      Validates whether all intents in the dataset contain descriptions.


